--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -429,60 +429,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class VAE_GAUSSIAN(nn.Module):\n",
-    "    def __init__(self, hidden_dim, latent_dim, input_dim = train_set.input_dim):\n",
-    "        super(VAE_GAUSSIAN, self).__init__()\n",
-    "        self.input_dim = input_dim\n",
-    "        self.hidden_dim = hidden_dim\n",
-    "        self.latent_dim = latent_dim\n",
-    "\n",
-    "        self.fc1 = nn.Linear(self.input_dim, self.hidden_dim)\n",
-    "        self.fc21 = nn.Linear(self.hidden_dim, self.latent_dim)\n",
-    "        self.fc22 = nn.Linear(self.hidden_dim, self.latent_dim)\n",
-    "        self.fc3 = nn.Linear(self.latent_dim, self.hidden_dim)\n",
-    "        self.fc4 = nn.Linear(self.hidden_dim, self.input_dim)\n",
-    "        self.fc5 = nn.Linear(self.hidden_dim, self.input_dim)\n",
-    "\n",
-    "    def encode(self, x):\n",
-    "        h = F.relu(self.fc1(x))\n",
-    "        return self.fc21(h), self.fc22(h)\n",
-    "\n",
-    "    def reparameterize(self, mu, logvar):\n",
-    "        std = torch.exp(0.5*logvar)\n",
-    "        eps = torch.randn_like(std)\n",
-    "        return eps.mul(std).add_(mu) # return z sample\n",
-    "\n",
-    "    def decode(self, z):\n",
-    "        h = F.relu(self.fc3(z))\n",
-    "        mu = self.fc4(h)\n",
-    "        logvar = self.fc5(h)\n",
-    "        return mu, logvar\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        mu_latent, logvar_latent = self.encode(x.view(-1, self.input_dim))\n",
-    "        z = self.reparameterize(mu_latent, logvar_latent)\n",
-    "        mu_x, logvar_x = self.decode(z)\n",
-    "        return mu_latent, logvar_latent, mu_x, logvar_x\n",
-    "    \n",
-    "def loss_function_gaussian(x, mu_x, logvar_x, mu_latent, logvar_latent):\n",
-    "    # neg log likelihood of x under normal\n",
-    "#     loss_rec = np.log(2.0 * np.pi) + logvar_x + (x - mu_x)**2 / (2*torch.exp(logvar_x))\n",
-    "    \n",
-    "    loss_rec = -torch.sum((-0.5 * np.log(2.0 * np.pi)) + \\\n",
-    "                          (-0.5 * logvar_x) + \\\n",
-    "                          ((-0.5 / torch.exp(logvar_x)) * \\\n",
-    "                           (x - mu_x) ** 2.0), \\\n",
-    "                          dim=1,)\n",
-    "    KLD = -0.5 * torch.sum(1 + logvar_latent - mu_latent.pow(2) - logvar_latent.exp())\n",
-    "    return loss_rec + KLD"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 293,
    "metadata": {},
    "outputs": [],
@@ -522,16 +468,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_gaussian = VAE_GAUSSIAN(hidden_dim=32,latent_dim=2).to(device)\n",
-    "optimizer_gaussian = optim.Adam(model_gaussian.parameters())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 296,
    "metadata": {
     "tags": []
@@ -561,70 +497,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_epoch_gaussian(tr_loader, model, criterion, optimizer, num_epochs):\n",
-    "    model.train()\n",
-    "    train_log = []\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for epoch in range(num_epochs):\n",
-    "            print(\"Started training epoch no. {}\".format(epoch+1))\n",
-    "            train_loss= 0\n",
-    "            for batch_idx, data in enumerate(train_loader):\n",
-    "                data = data.to(device, dtype=torch.float32)\n",
-    "                optimizer.zero_grad()\n",
-    "                mu_latent, logvar_latent, mu_x, logvar_x = model(data)\n",
-    "                loss = criterion(data, mu_x, logvar_x, mu_latent, logvar_latent)\n",
-    "                loss.backward()\n",
-    "                train_loss += loss.item()\n",
-    "                optimizer.step()\n",
-    "            print('====> Epoch: {} Average loss: {:.8f}\\n'.format(\n",
-    "                epoch+1, train_loss / len(train_loader.dataset)))\n",
-    "            train_log.append({\n",
-    "                'epoch': epoch,\n",
-    "                'train_loss': train_loss / len(train_loader.dataset)})\n",
-    "    return train_log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Started training epoch no. 1\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "element 0 of tensors does not require grad and does not have a grad_fn",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-297-5569dfaf1c99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_epoch_gaussian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel_gaussian\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_function_gaussian\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer_gaussian\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mEPOCHS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-290-e8c01e1c6ab7>\u001b[0m in \u001b[0;36mtrain_epoch_gaussian\u001b[0;34m(tr_loader, model, criterion, optimizer, num_epochs)\u001b[0m\n\u001b[1;32m     12\u001b[0m                 \u001b[0mmu_latent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar_latent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu_latent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar_latent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m                 \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m                 \u001b[0mtrain_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_latest_p36/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    196\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m         \"\"\"\n\u001b[0;32m--> 198\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_latest_p36/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     99\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: element 0 of tensors does not require grad and does not have a grad_fn"
+      "[autoreload of utils failed: Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/pytorch_latest_p36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/pytorch_latest_p36/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/pytorch_latest_p36/lib/python3.6/imp.py\", line 315, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/pytorch_latest_p36/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 600, in _exec\n",
+      "AttributeError: 'NoneType' object has no attribute 'name'\n",
+      "]\n"
      ]
     }
    ],
-   "source": [
-    "train_epoch_gaussian(train_loader,model_gaussian,loss_function_gaussian,optimizer_gaussian,num_epochs= EPOCHS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def train_epoch(tr_loader, model, criterion, optimizer, num_epochs):\n",
     "    model.train()\n",
