No changed to VAE

--- a/code/5_gaussian_VAE.ipynb
+++ b/code/5_gaussian_VAE.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,25 +361,305 @@
     "    \n",
     "def loss_function_gaussian(x, mu_x, logvar_x, mu_latent, logvar_latent):\n",
     "    # neg log likelihood of x under normal\n",
-    "#     loss_rec = np.log(2.0 * np.pi) + logvar_x + (x - mu_x)**2 / (2*torch.exp(logvar_x))\n",
-    "    \n",
-    "    loss_rec = -torch.sum((-0.5 * np.log(2.0 * np.pi)) + \\\n",
-    "                          (-0.5 * logvar_x) + \\\n",
-    "                          ((-0.5 / torch.exp(logvar_x)) * \\\n",
-    "                           (x - mu_x) ** 2.0), \\\n",
-    "                          dim=1,)\n",
+    "    loss_rec = np.log(2.0 * np.pi) + logvar_x + (x - mu_x)**2 / (2*torch.exp(logvar_x))\n",
     "    KLD = -0.5 * torch.sum(1 + logvar_latent - mu_latent.pow(2) - logvar_latent.exp())\n",
-    "    return loss_rec + KLD"
+    "    return torch.mean(loss_rec) + KLD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_gaussian = VAE_GAUSSIAN(hidden_dim=32,latent_dim=2).to(device)\n",
     "optimizer_gaussian = optim.Adam(model_gaussian.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch_gaussian(tr_loader, model, criterion, optimizer, num_epochs):\n",
+    "    model.train()\n",
+    "    train_log = []\n",
+    "    \n",
+    "    for epoch in range(num_epochs):\n",
+    "        print(\"Started training epoch no. {}\".format(epoch+1))\n",
+    "        train_loss= 0\n",
+    "        for batch_idx, data in enumerate(train_loader):\n",
+    "            data = data.to(device, dtype=torch.float32)\n",
+    "            optimizer.zero_grad()\n",
+    "            mu_latent, logvar_latent, mu_x, logvar_x = model(data)\n",
+    "            loss = criterion(data, mu_x, logvar_x, mu_latent, logvar_latent)\n",
+    "            loss.backward()\n",
+    "            train_loss += loss.item()\n",
+    "            optimizer.step()\n",
+    "        print('====> Epoch: {} Average loss: {:.8f}\\n'.format(\n",
+    "            epoch+1, train_loss / len(train_loader.dataset)))\n",
+    "        train_log.append({\n",
+    "            'epoch': epoch,\n",
+    "            'train_loss': train_loss / len(train_loader.dataset)})\n",
+    "    return train_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model_gaussian(test_loader, model):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    with torch.no_grad():\n",
+    "        for i, data in enumerate(test_loader):\n",
+    "            data = data.to(device, dtype=torch.float32)\n",
+    "            mu_latent, logvar_latent, mu_x, logvar_x = model(data)\n",
+    "            test_loss += loss_function_gaussian(data, mu_x, logvar_x, mu_latent, logvar_latent).item()\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "    print('====> Test set loss: {:.4f}'.format(test_loss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started training epoch no. 1\n",
+      "====> Epoch: 1 Average loss: 0.06710437\n",
+      "\n",
+      "Started training epoch no. 2\n",
+      "====> Epoch: 2 Average loss: 0.06710505\n",
+      "\n",
+      "Started training epoch no. 3\n",
+      "====> Epoch: 3 Average loss: 0.06709810\n",
+      "\n",
+      "Started training epoch no. 4\n",
+      "====> Epoch: 4 Average loss: 0.06709752\n",
+      "\n",
+      "Started training epoch no. 5\n",
+      "====> Epoch: 5 Average loss: 0.06708708\n",
+      "\n",
+      "Started training epoch no. 6\n",
+      "====> Epoch: 6 Average loss: 0.06709964\n",
+      "\n",
+      "Started training epoch no. 7\n",
+      "====> Epoch: 7 Average loss: 0.06709679\n",
+      "\n",
+      "Started training epoch no. 8\n",
+      "====> Epoch: 8 Average loss: 0.06709542\n",
+      "\n",
+      "Started training epoch no. 9\n",
+      "====> Epoch: 9 Average loss: 0.06709653\n",
+      "\n",
+      "Started training epoch no. 10\n",
+      "====> Epoch: 10 Average loss: 0.06708962\n",
+      "\n",
+      "Started training epoch no. 11\n",
+      "====> Epoch: 11 Average loss: 0.06708955\n",
+      "\n",
+      "Started training epoch no. 12\n",
+      "====> Epoch: 12 Average loss: 0.06709564\n",
+      "\n",
+      "Started training epoch no. 13\n",
+      "====> Epoch: 13 Average loss: 0.06709066\n",
+      "\n",
+      "Started training epoch no. 14\n",
+      "====> Epoch: 14 Average loss: 0.06710166\n",
+      "\n",
+      "Started training epoch no. 15\n",
+      "====> Epoch: 15 Average loss: 0.06708848\n",
+      "\n",
+      "Started training epoch no. 16\n",
+      "====> Epoch: 16 Average loss: 0.06709206\n",
+      "\n",
+      "Started training epoch no. 17\n",
+      "====> Epoch: 17 Average loss: 0.06708901\n",
+      "\n",
+      "Started training epoch no. 18\n",
+      "====> Epoch: 18 Average loss: 0.06709735\n",
+      "\n",
+      "Started training epoch no. 19\n",
+      "====> Epoch: 19 Average loss: 0.06709555\n",
+      "\n",
+      "Started training epoch no. 20\n",
+      "====> Epoch: 20 Average loss: 0.06709085\n",
+      "\n",
+      "Started training epoch no. 21\n",
+      "====> Epoch: 21 Average loss: 0.06709728\n",
+      "\n",
+      "Started training epoch no. 22\n",
+      "====> Epoch: 22 Average loss: 0.06708318\n",
+      "\n",
+      "Started training epoch no. 23\n",
+      "====> Epoch: 23 Average loss: 0.06708767\n",
+      "\n",
+      "Started training epoch no. 24\n",
+      "====> Epoch: 24 Average loss: 0.06708990\n",
+      "\n",
+      "Started training epoch no. 25\n",
+      "====> Epoch: 25 Average loss: 0.06708816\n",
+      "\n",
+      "Started training epoch no. 26\n",
+      "====> Epoch: 26 Average loss: 0.06708553\n",
+      "\n",
+      "Started training epoch no. 27\n",
+      "====> Epoch: 27 Average loss: 0.06709841\n",
+      "\n",
+      "Started training epoch no. 28\n",
+      "====> Epoch: 28 Average loss: 0.06708499\n",
+      "\n",
+      "Started training epoch no. 29\n",
+      "====> Epoch: 29 Average loss: 0.06708584\n",
+      "\n",
+      "Started training epoch no. 30\n",
+      "====> Epoch: 30 Average loss: 0.06709484\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'epoch': 0, 'train_loss': 0.06710437422197064},\n",
+       " {'epoch': 1, 'train_loss': 0.06710505465640122},\n",
+       " {'epoch': 2, 'train_loss': 0.06709810451433046},\n",
+       " {'epoch': 3, 'train_loss': 0.0670975201881108},\n",
+       " {'epoch': 4, 'train_loss': 0.06708707719571705},\n",
+       " {'epoch': 5, 'train_loss': 0.06709963773432416},\n",
+       " {'epoch': 6, 'train_loss': 0.06709679189559456},\n",
+       " {'epoch': 7, 'train_loss': 0.06709542422747979},\n",
+       " {'epoch': 8, 'train_loss': 0.06709652663693245},\n",
+       " {'epoch': 9, 'train_loss': 0.06708962272627565},\n",
+       " {'epoch': 10, 'train_loss': 0.06708954922763108},\n",
+       " {'epoch': 11, 'train_loss': 0.06709563706986467},\n",
+       " {'epoch': 12, 'train_loss': 0.06709065724266464},\n",
+       " {'epoch': 13, 'train_loss': 0.06710166200437374},\n",
+       " {'epoch': 14, 'train_loss': 0.0670884842082221},\n",
+       " {'epoch': 15, 'train_loss': 0.0670920619672969},\n",
+       " {'epoch': 16, 'train_loss': 0.0670890144037228},\n",
+       " {'epoch': 17, 'train_loss': 0.06709734993760823},\n",
+       " {'epoch': 18, 'train_loss': 0.06709555133607434},\n",
+       " {'epoch': 19, 'train_loss': 0.06709085023146294},\n",
+       " {'epoch': 20, 'train_loss': 0.06709728248339482},\n",
+       " {'epoch': 21, 'train_loss': 0.06708317976054566},\n",
+       " {'epoch': 22, 'train_loss': 0.06708767124685887},\n",
+       " {'epoch': 23, 'train_loss': 0.06708990295265792},\n",
+       " {'epoch': 24, 'train_loss': 0.06708815664452317},\n",
+       " {'epoch': 25, 'train_loss': 0.06708553442048996},\n",
+       " {'epoch': 26, 'train_loss': 0.0670984096791112},\n",
+       " {'epoch': 27, 'train_loss': 0.0670849858576423},\n",
+       " {'epoch': 28, 'train_loss': 0.06708584172686005},\n",
+       " {'epoch': 29, 'train_loss': 0.0670948436110078}]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_epoch_gaussian(train_loader,model_gaussian,loss_function_gaussian,optimizer_gaussian,num_epochs= EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using pre-defined VAE FEATURES\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/AYP/code/py_4/get_all_features.py:85: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['co_authors']=df.authors.apply( lambda x: [i['name'] for i in x] )\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using old scaler\n",
+      "['MESH NAME NOT FOUND: Illicit Drugs', 'MESH NAME NOT FOUND: Male', 'MESH NAME NOT FOUND: Reinforcement, Psychology', 'MESH NAME NOT FOUND: Phospholipid Hydroperoxide Glutathione Peroxidase', 'MESH NAME NOT FOUND: Infections', 'MESH NAME NOT FOUND: Chlorocebus aethiops', 'MESH NAME NOT FOUND: Recognition, Psychology', 'MESH NAME NOT FOUND: Dependency, Psychological', 'MESH NAME NOT FOUND: mTOR Associated Protein, LST8 Homolog', \"MESH NAME NOT FOUND: Practice Patterns, Physicians'\", 'MESH NAME NOT FOUND: Conditioning, Psychological', 'MESH NAME NOT FOUND: Outcome Assessment, Health Care', 'MESH NAME NOT FOUND: Diet, Healthy', 'MESH NAME NOT FOUND: RNA, Circular', 'MESH NAME NOT FOUND: Outcome and Process Assessment, Health Care', 'MESH NAME NOT FOUND: Mitophagy', 'MESH NAME NOT FOUND: Inhibition, Psychological', 'MESH NAME NOT FOUND: Phosphoinositide-3 Kinase Inhibitors', 'MESH NAME NOT FOUND: Female', 'MESH NAME NOT FOUND: Confounding Factors, Epidemiologic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_set = ToyDS(df_nonan, selection_test, vae_features = train_set.__getvae__())\n",
+    "test_loader=DataLoader(dataset= test_set, batch_size = BATCH_SIZE, shuffle = True, num_workers = num_workers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> Test set loss: 0.0670\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model_gaussian(test_loader, model_gaussian)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = torch.from_numpy(test_set.features).to(device,dtype=torch.float32)\n",
+    "mu_latent, logvar_latent, mu_x, logvar_x = model_gaussian(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(test_set.features.shape==mu_x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.992902788039997"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.square(mu_x.detach().cpu().numpy() - test_set.features))"
    ]
   },
   {
