--- a/code/5_MNIST_toy.ipynb
+++ b/code/5_MNIST_toy.ipynb
@@ -242,7 +242,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
