Working on mix bad use case

--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -14143,86 +14143,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot take a larger sample than population when 'replace=False'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-90-eb097a894f8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0mlen_all\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindie_authors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m \u001b[0mrand_auth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen_all\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0mpossible_authors_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindie_authors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrand_auth\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot take a larger sample than population when 'replace=False'"
+     ]
+    }
+   ],
    "source": [
+    "#Two disambiguated authors with at both at least 3 papers, but dif. number of clusters (dif > 5)\n",
+    "#Get disambiguate authors\n",
+    "unique_authors = df.groupby('last_author_name')[[\"PI_IDS\"]].nunique()\n",
+    "unique_authors = unique_authors[unique_authors[\"PI_IDS\"] == 2].index\n",
+    "#Combine rows based off last_author_name\n",
+    "indie_authors = df[df['last_author_name'].isin(unique_authors)].groupby(['last_author_name','PI_IDS'])[['pmid']].nunique().reset_index(1)\n",
+    "indie_authors = indie_authors.join(indie_authors, lsuffix=\"_l\", rsuffix='_r').reset_index()\n",
+    "indie_authors = indie_authors[indie_authors[\"PI_IDS_l\"] != indie_authors[\"PI_IDS_r\"]].drop_duplicates(\"last_author_name\",keep=\"first\").set_index('last_author_name')\n",
+    "indie_authors = list(indie_authors[(indie_authors[\"pmid_l\"] < 3) | \n",
+    "                                    (indie_authors[\"pmid_r\"] < 3)].index)\n",
+    "len_all = len(indie_authors)\n",
+    "np.random.seed(42)\n",
+    "rand_auth = np.random.choice(range(len_all),50,replace=False)\n",
+    "possible_authors_2 = list(np.array(indie_authors)[rand_auth])\n",
+    "\n",
+    "unique_authors = df.groupby('last_author_name')[[\"PI_IDS\"]].nunique()\n",
+    "unique_authors = unique_authors[unique_authors[\"PI_IDS\"] == 3].index\n",
+    "indie_authors = df[df['last_author_name'].isin(unique_authors)].groupby(['last_author_name','PI_IDS'])[['pmid']]                                                                  .nunique().reset_index(1)\n",
+    "\n",
+    "indie_authors2 = indie_authors.join(indie_authors, lsuffix=\"_l\", rsuffix='_r')\n",
+    "indie_authors = indie_authors2.join(indie_authors, lsuffix=\"_l\", rsuffix='_r').reset_index()\n",
+    "\n",
+    "indie_authors = indie_authors[(indie_authors[\"PI_IDS_l\"] != indie_authors[\"PI_IDS_r\"]) & \\\n",
+    "                            (indie_authors[\"PI_IDS_l\"] != indie_authors[\"PI_IDS\"]) & \\\n",
+    "                            (indie_authors[\"PI_IDS_r\"] != indie_authors[\"PI_IDS\"])] \\\n",
+    "                            .drop_duplicates(\"last_author_name\",keep=\"first\") \\\n",
+    "                            .set_index('last_author_name')                     \n",
+    "\n",
+    "indie_authors = list(indie_authors[(((indie_authors[\"pmid_l\"] < 3) & \\\n",
+    "                          (indie_authors[\"pmid_r\"] < 3) & \\\n",
+    "                          (indie_authors[\"pmid\"] > 3)) | \\\n",
+    "                    ((indie_authors[\"pmid_l\"] < 3) & \\\n",
+    "                          (indie_authors[\"pmid_r\"] > 3) & \\\n",
+    "                          (indie_authors[\"pmid\"] < 3)) | \\\n",
+    "                    ((indie_authors[\"pmid_l\"] > 3) & \\\n",
+    "                          (indie_authors[\"pmid_r\"] < 3) & \\\n",
+    "                          (indie_authors[\"pmid\"] < 3)))].index)\n",
+    "len_all = len(indie_authors)\n",
+    "np.random.seed(42)\n",
+    "rand_auth = np.random.choice(range(len_all),50,replace=False)\n",
+    "possible_authors_3 = list(np.array(indie_authors)[rand_auth])\n",
+    "\n",
     "unique_authors = df.groupby('last_author_name')[[\"PI_IDS\"]].nunique()\n",
     "unique_authors = unique_authors[unique_authors[\"PI_IDS\"] == 1].index\n",
     "indie_authors = df[df['last_author_name'].isin(unique_authors)].groupby(['last_author_name','PI_IDS'])[['pmid']].nunique().reset_index(1)\n",
-    "all_1da_auth = list(indie_authors[(indie_authors.pmid > 5) & (indie_authors.pmid < 40)].index)\n",
-    "len_all = len(all_1da_auth)"
+    "indie_authors = list(indie_authors[(indie_authors.pmid < 7) | (indie_authors.pmid > 40)].index)\n",
+    "len_all = len(indie_authors)\n",
+    "np.random.seed(42)\n",
+    "rand_auth = np.random.choice(range(len_all),50,replace=False)\n",
+    "possible_authors_1 = list(np.array(indie_authors)[rand_auth])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_mix_authors = possible_authors_1 + possible_authors_2 + possible_authors_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Beck, AH',\n",
-       " 'Witten, D',\n",
-       " 'Freedland, SJ',\n",
-       " 'Prince, JL',\n",
-       " 'Humphreys, BD',\n",
-       " 'Jayawickramarajah, J',\n",
-       " 'Rademakers, R',\n",
-       " 'Pizzagalli, DA',\n",
-       " 'Reed, JC',\n",
-       " 'Khalili, K',\n",
-       " 'Lemmon, MA',\n",
-       " 'Lenze, EJ',\n",
-       " 'Pu, WT',\n",
-       " 'Nocera, DG',\n",
-       " 'Nash, D',\n",
-       " 'Dillard, JP',\n",
-       " 'Kay, NE',\n",
-       " 'Saba, JD',\n",
-       " 'Sacchettini, JC',\n",
-       " 'Levy, DN',\n",
-       " 'Akbarali, HI',\n",
-       " 'Fidock, DA',\n",
-       " 'Ping, P',\n",
-       " 'Ackerman, MJ',\n",
-       " 'Schmidt, AM',\n",
-       " 'Moe, SM',\n",
-       " 'Milham, MP',\n",
-       " 'Derdeyn, CA',\n",
-       " 'Burton, DR',\n",
-       " 'Johnson, DE',\n",
-       " 'Cartee, GD',\n",
-       " 'Flynn, PM',\n",
-       " 'Norcia, AM',\n",
-       " 'Maris, JM',\n",
-       " 'Sanacora, G',\n",
-       " 'Lerman, C',\n",
-       " 'Rohatgi, R',\n",
-       " 'Berger, JS',\n",
-       " 'Kleinstein, SH',\n",
-       " 'Ullman, SE',\n",
-       " 'During, MJ',\n",
-       " 'Driban, JB',\n",
-       " 'Qi, LS',\n",
-       " 'Ford, ML',\n",
-       " 'Muddiman, DC',\n",
-       " 'Goodnow, CC',\n",
-       " 'Millhauser, GL',\n",
-       " 'Bilder, RM',\n",
-       " 'Belasco, JG',\n",
-       " 'Blount, P']"
+       "659"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(42)\n",
-    "list1 = np.random.choice(range(len_all),50,replace=False)\n",
-    "list(np.array(all_1da_auth)[list1])"
+    "len(all_mix_authors)"
    ]
   }
  ],
