Semi-ready pipeline

--- a/code/6_pipeline_VAE_DBSCAN.ipynb
+++ b/code/6_pipeline_VAE_DBSCAN.ipynb
@@ -183,7 +183,6 @@
     "        \n",
     "    y_hat_comb = []\n",
     "\n",
-    "        \n",
     "    for case in df_all_cases:\n",
     "        df_clus, latent_feat = case\n",
     "        y_hat = DBS(eps=db_eps,min_samples=1,metric=\"euclidean\").fit(latent_feat)\n",
@@ -222,6 +221,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def pipeline_vae_db(df,auth_df,authors,use_case,eps):\n",
+    "    \n",
+    "    if use_case == \"1_da\" or use_case == \"mix_bag\":\n",
+    "        authors = sim_matrix_3.get_use_case(df,use_case)\n",
+    "    else:\n",
+    "        auth_df = df[df['last_author_name'].isin(authors)]   \n",
+    "        authors = sim_matrix_3.get_use_case(auth_df,use_case)\n",
+    "        \n",
+    "    num_cases = len(authors)\n",
+    "    \n",
+    "    df_all_cases = []\n",
+    "    all_papers = []\n",
+    "\n",
+    "    for i,auth in enumerate(authors):\n",
+    "        print(\"Processing combination number {} from {}\".format(i+1,num_cases))\n",
+    "        df_auth = df[df['last_author_name'] == auth]\n",
+    "        all_papers.append(df_auth.shape[0])\n",
+    "        #Calculate the distance matrix\n",
+    "        \n",
+    "        df_auth = df[df['last_author_name'] == auth] \n",
+    "        data = ToyDS(df, selection_test, vae_features = vae_feat.__getvae__())\n",
+    "        data = torch.from_numpy(data).to(device,dtype=torch.float32)\n",
+    "        _, mu, __ = model(data)\n",
+    "        latent_feat = mu.detach().cpu().numpy()\n",
+    "        df_all_cases.append([df_auth,latent_feat])\n",
+    "\n",
+    "    y_hat_comb = []\n",
+    "    \n",
+    "    for case in df_all_cases:\n",
+    "        df_clus, latent_feat = case\n",
+    "        y_hat = DBS(eps=db_eps,min_samples=1,metric=\"euclidean\").fit(latent_feat)\n",
+    "        df_clus = df_clus[[\"pmid\",\"PI_IDS\"]]\n",
+    "        df_clus['cluster_pred'] = y_hat.labels_\n",
+    "        y_hat_comb.append(df_clus)\n",
+    "    \n",
+    "    return y_hat_comb, num_cases, np.mean(np.array(all_papers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "usecase = list(pd.read_csv(\"../data/test_set_author_names.csv\").drop(columns=[\"Unnamed: 0\"])[\"0\"])\n",
     "df_usecase = df[df['last_author_name'].isin(usecase)]"
    ]
@@ -236,9 +279,26 @@
     "use_cases = ['2_da_same','2_da_dif','3_da', '1_da','mix_bag']\n",
     "\n",
     "for case in use_cases:\n",
-    "    y_hat_comb, num_cases, num_papers = db_scan_3.db_multiple(ps,df,scaler = scaler, authors=usecase,use_case=case,weights=weights,bias=bias,epsilon=epsilon)\n",
+    "    y_hat_comb, num_cases, num_papers = pipeline_vae_db(df,df_usecase,authors=usecase,use_case=case,epsilon=best_eps)\n",
     "    f1, precision, recall, df_eval = metric_eval_2.get_metrics_many(y_hat_comb)\n",
     "    total_metric.append([case,f1,precision,recall,df_eval, num_cases, num_papers])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%capture cap --no-stderr\n",
+    "for val in total_metric:\n",
+    "    case, f1, prec, rec, df_eval, num_cases, num_papers = val\n",
+    "    print(\"CASE: {}\\tNumber of authors: {}\\tAvg. Number of papers: {}\".format(case,num_cases,num_papers))\n",
+    "    print(\"\\nF1-Score: {}\\tTotal Precision: {}\\tTotal Recall: {}\".format(f1,prec,rec))\n",
+    "    print(df_eval)\n",
+    "    print(\"\\n\")\n",
+    "# with open('txt/test_scores_VAE_model.txt', 'w') as out:\n",
+    "#    out.write(cap.stdout)"
    ]
   }
  ],
